<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/vh_item_padding_horizontal"
    android:paddingTop="@dimen/vh_item_padding_vertical"
    android:paddingEnd="@dimen/vh_item_padding_horizontal"
    android:paddingBottom="@dimen/vh_item_padding_vertical">

    <TextView
        android:id="@+id/txt_title"
        style="@style/VhItemTitle"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/txt_status_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_status_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:text="Status" />

    <TextView
        android:id="@+id/txt_status"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_status_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_status_label"
        tools:text="Status" />

    <TextView
        android:id="@+id/txt_trackcount_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_trackcount_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_status"
        tools:text="Trackcount" />

    <TextView
        android:id="@+id/txt_trackcount"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_trackcount_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_trackcount_label"
        tools:text="Trackcount" />

    <TextView
        android:id="@+id/txt_date_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_date_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trackcount"
        tools:text="Date" />

    <TextView
        android:id="@+id/txt_date"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_date_label"
        tools:text="Date" />

    <TextView
        android:id="@+id/txt_country_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_country_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date"
        tools:text="Country" />

    <TextView
        android:id="@+id/txt_country"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_country_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_country_label"
        tools:text="Country" />

    <TextView
        android:id="@+id/txt_disambiguation_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_disambiguation_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_country"
        tools:text="Disambiguation" />

    <TextView
        android:id="@+id/txt_disambiguation"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_disambiguation_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_disambiguation_label"
        tools:text="Disambiguation" />

    <TextView
        android:id="@+id/txt_score_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_score_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_disambiguation"
        tools:text="Score" />

    <TextView
        android:id="@+id/txt_score"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_score_label"
        tools:text="Score" />

    <TextView
        android:id="@+id/txt_packaging_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_packaging_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_score"
        tools:text="Packaging" />

    <TextView
        android:id="@+id/txt_packaging"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_packaging_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_packaging_label"
        tools:text="Packaging" />

    <TextView
        android:id="@+id/txt_barcode_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/album_barcode_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_packaging"
        tools:text="Barcode" />

    <TextView
        android:id="@+id/txt_barcode"
        style="@style/VhItemMeta"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_barcode_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_barcode_label"
        tools:text="Barcode" />

</androidx.constraintlayout.widget.ConstraintLayout>
