<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/vh_item_padding_horizontal"
    android:paddingTop="@dimen/vh_item_padding_vertical"
    android:paddingEnd="@dimen/vh_item_padding_horizontal"
    android:paddingBottom="@dimen/vh_item_padding_vertical">

    <TextView
        android:id="@+id/txt_name"
        style="@style/VhItemMeta"
        android:layout_marginStart="0dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name label" />

    <TextView
        android:id="@+id/txt_type_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_type_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        tools:text="Type label" />

    <TextView
        android:id="@+id/txt_type"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_type_label"
        tools:text="Type" />

    <TextView
        android:id="@+id/txt_country_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_country_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_type_label"
        tools:text="Country label" />

    <TextView
        android:id="@+id/txt_country"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_country_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_country_label"
        tools:text="Country" />

    <TextView
        android:id="@+id/txt_score_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_score_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_country_label"
        tools:text="Score label" />

    <TextView
        android:id="@+id/txt_score"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_score_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_score_label"
        tools:text="Score" />

    <TextView
        android:id="@+id/txt_area_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_area_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_label"
        tools:text="Area label" />

    <TextView
        android:id="@+id/txt_area"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_area_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_area_label"
        tools:text="Area" />

    <TextView
        android:id="@+id/txt_begin_date_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_begin_date_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_area_label"
        tools:text="Begin date label" />

    <TextView
        android:id="@+id/txt_begin_date"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_begin_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_begin_date_label"
        tools:text="Begin date" />

    <TextView
        android:id="@+id/txt_end_date_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_end_date_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_begin_date_label"
        tools:text="End date label" />

    <TextView
        android:id="@+id/txt_end_date"
        style="@style/VhItemMeta"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/txt_end_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/txt_end_date_label"
        tools:text="End date" />

    <TextView
        android:id="@+id/txt_tags_label"
        style="@style/VhItemLabel"
        android:layout_marginTop="@dimen/vh_item_meta_txt_margin_top"
        android:text="@string/artist_tags_label"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_end_date_label"
        tools:text="Tags label" />

    <TextView
        android:id="@+id/txt_tags"
        style="@style/VhItemMeta"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/txt_tags_margin_top"
        android:maxLines="20"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/txt_tags_label"
        app:layout_constraintTop_toBottomOf="@+id/txt_tags_label"
        tools:text="Tags" />

</androidx.constraintlayout.widget.ConstraintLayout>
