<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/vh_item_padding_horizontal"
    android:paddingTop="@dimen/vh_item_padding_vertical"
    android:paddingEnd="@dimen/vh_item_padding_horizontal"
    android:paddingBottom="@dimen/vh_item_padding_vertical">

    <TextView
        android:id="@+id/txt_albums_title_header"
        style="@style/VhItemTitle"
        android:text="@string/albums_title_header"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Albums" />

</androidx.constraintlayout.widget.ConstraintLayout>
